security/network-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kuberesue
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: kuberesue
spec:
  selector:
    app: database
  ports:
    - port: 80
      targetPort: 80
